--- a/index.html
+++ b/index.html
@@ -28,24 +28,29 @@
           <a class="logo" href="https://sectiodivina.net"
             ><img class="logo hidden1" src="./logo.png" alt=""
           /></a>
-          <h1 class="main-text">
-            Чжун Юань Цигун – достижение гармонии тела и разума.
-          </h1>
-          <p class="text-description1">
-            Древняя китайская система упражнений Чжун юань цигун поможет вам
-            укрепить здоровье, улучшить иммунную систему и увеличить свою
-            энергию. Наша команда профессиональных инструкторов предоставляет
-            обучение Чжун юань цигун на любом уровне сложности. Мы научим вас
-            правильно дышать, контролировать свой ум и тело, а также достигать
-            глубокой релаксации. Мы гарантируем, что Чжун юань цигун поможет вам
-            не только улучшить свое физическое состояние, но и справиться с
-            эмоциональным стрессом и повысить свою концентрацию. Присоединяйтесь
-            к нам и начните путь к здоровью и гармонии уже сегодня!
-          </p>
+          <div class="text-description">
+            <h1 class="main-text">
+              Чжун Юань Цигун – достижение гармонии тела и разума.
+            </h1>
+            <p class="text-description1">
+              Древняя китайская система упражнений Чжун юань цигун поможет вам
+              укрепить здоровье, улучшить иммунную систему и увеличить свою
+              энергию. Наша команда профессиональных инструкторов предоставляет
+              обучение Чжун юань цигун на любом уровне сложности. Мы научим вас
+              правильно дышать, контролировать свой ум и тело, а также достигать
+              глубокой релаксации. Мы гарантируем, что Чжун юань цигун поможет вам
+              не только улучшить свое физическое состояние, но и справиться с
+              эмоциональным стрессом и повысить свою концентрацию. Присоединяйтесь
+              к нам и начните путь к здоровью и гармонии уже сегодня!
+            </p>
+          </div>
+  
         </div>
       </div>
       <section id="contact">
-        <h5>Зарегистрироваться на бесплатный урок, заполнив форму ниже:</h5>
+        <div class="text-main-section">
+          <h5>Зарегистрироваться на бесплатный урок, заполнив форму ниже:</h5>
+        </div>
         <div class="form">
           <form
             class="form1"
@@ -64,7 +69,7 @@
         </div>
 
         <video width="300" height="150" controls>
-          <source src="video.mp4" type="video/mp4" />
+          <source src="/video.mp4" type="video/mp4" />
         </video>
       </section>
       <div class="btn3">
@@ -75,8 +80,8 @@
       </div>
     </main>
     <div class="footer__wrapper container">
-      <p class="text1">Авторские права защищены</p>
-      <p class="text">© 2023 Золотое Сечение</p>
+      <p class="text-1">Авторские права защищены</p>
+      <p class="text-2">© 2023 Золотое Сечение</p>
     </div>
   </body>
 </html>
