--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <video width="300" height="150" controls>
-          <source src="/video.mp4" type="video/mp4" />
+          <source src="./video.mp4" type="video/mp4" />
         </video>
       </section>
       <div class="btn3">
