--- a/index.html
+++ b/index.html
@@ -52,23 +52,14 @@
           <h5>Зарегистрироваться на бесплатный урок, заполнив форму ниже:</h5>
         </div>
         <div class="form">
-          <form
-            class="form1"
-            action="https://formspree.io/f/mrgvoazy"
-            method="POST"
-          >
+          <form class="form1" action="https://formspree.io/f/mrgvoazy" method="POST">
             <label class="emailform" for="email">Email:</label>
-            <input
-              class="formas"
-              type="email"
-              name="_replyto"
-              id="email"
-            /><br />
+            <input class="formas" type="email" name="_replyto" id="email"/><br />
             <input class="btn" type="submit" value="Отправить" />
           </form>
         </div>
 
-        <video width="300" height="150" controls>
+        <video class="video-mobile" width="500" height="400" controls>
           <source src="./video.mp4" type="video/mp4" />
         </video>
       </section>
@@ -81,7 +72,7 @@
     </main>
     <div class="footer__wrapper container">
       <p class="text-1">Авторские права защищены</p>
-      <p class="text-2">© 2023 Золотое Сечение</p>
+      <p class="text-2">© 2024 Золотое Сечение</p>
     </div>
   </body>
 </html>
